# DynamixelHandler-ros2

./: .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  package.xml
config/: config_dynamixel_handler-fast.yaml  config_dynamixel_handler.yaml  config_dynamixel_unify_baudrate.yaml  dynamixel_handler.yaml  dynamixel_unify_baudrate.yaml
dynamixel_handler/: CMakeLists.txt  ReadMe.md  package.xml
dynamixel_handler/config/: config_dynamixel_handler-fast.yaml  config_dynamixel_handler.yaml  config_dynamixel_unify_baudrate.yaml
dynamixel_handler/include/myUtils/: formatting_output.hpp
dynamixel_handler/launch/: dynamixel_handler_launch.xml  dynamixel_unify_baudrate_launch.xml  launch_dynamixel_handler.py  launch_dynamixel_unify_baudrate.py
dynamixel_handler/src/: dynamixel_handler.cpp  dynamixel_handler.hpp  dynamixel_handler_dyn_interface_loop.cpp  dynamixel_handler_dyn_interface_once.cpp  dynamixel_handler_extra_traits.hpp  dynamixel_handler_ros_interface_pub.cpp  dynamixel_handler_ros_interface_sub.cpp  dynamixel_handler_ros_setup_for_cli.cpp  dynamixel_handler_ros_setup_for_program.cpp  main.cpp
dynamixel_handler/src/internal/myUtils/: formatting_output.hpp  make_iterator_convenient.hpp
dynamixel_handler/src/optional_function/: external_port.cpp  external_port.hpp  imu_opencr.cpp
dynamixel_handler/tools/: benchmark_dynamixel_communicator.cpp
dynamixel_handler_examples/: CMakeLists.txt  ReadMe.md  package.xml
dynamixel_handler_examples/config/: dynamixel_config_faster.yml
dynamixel_handler_examples/launch/: example1.xml  example1_dynamixel-handler.xml  example1_minimum-control.xml  example2.xml
dynamixel_handler_examples/src/: example1.cpp  example2.cpp  test.cpp
dynamixel_handler_msgs/: CMakeLists.txt  ReadMe.md  package.xml
dynamixel_handler_msgs/msg/: DxlCommandsAll.msg  DxlCommandsP.msg  DxlCommandsPro.msg  DxlCommandsX.msg  DxlExternalPort.msg  DxlStates.msg  DynamixelControlPExtendedPosition.msg  DynamixelControlPVelocity.msg  DynamixelControlProExtendedPosition.msg  DynamixelControlProPosition.msg  DynamixelControlProVelocity.msg  DynamixelControlXPwm.msg  DynamixelDebug.msg  DynamixelError.msg  DynamixelExtra.msg  DynamixelExtraDrivemode.msg  DynamixelExtraLed.msg  DynamixelExtraMovingstatus.msg  DynamixelExtraRestoreconfig.msg  DynamixelExtraShutdown.msg  DynamixelGain.msg  DynamixelGoal.msg  DynamixelPresent.msg  DynamixelStatus.msg
include/myUtils/: formatting_output.hpp  logging_like_ros1.hpp  make_iterator_convenient.hpp
launch/: dynamixel_handler_launch.py  dynamixel_handler_launch.xml  dynamixel_unify_baudrate_launch.xml  launch_dynamixel_handler.py  launch_dynamixel_unify_baudrate.py
msg/: DxlCommandsP.msg  DxlCommandsX.msg  DxlExternalPort.msg  DxlStates.msg  DynamixelCmd.msg  DynamixelCommand.msg  DynamixelCommandPControlCurrent.msg  DynamixelCommandPControlExtendedPosition.msg  DynamixelCommandPControlPosition.msg  DynamixelCommandPControlVelocity.msg  DynamixelCommandProfile.msg  DynamixelCommandXControlCurrent.msg  DynamixelCommandXControlCurrentPosition.msg  DynamixelCommandXControlExtendedPosition.msg  DynamixelCommandXControlPosition.msg  DynamixelCommandXControlVelocity.msg  DynamixelCommonCmd.msg  DynamixelConfig.msg  DynamixelControlPExtendedPosition.msg  DynamixelControlPPosition.msg  DynamixelControlXPosition.msg  DynamixelDebug.msg  DynamixelDebugElement.msg  DynamixelError.msg  DynamixelExtra.msg  DynamixelExtraRestureconfig.msg  DynamixelGoal.msg  DynamixelInfo.msg  DynamixelLimit.msg  DynamixelOptionConfig.msg  DynamixelOptionExtra.msg  DynamixelOptionGain.msg  DynamixelOptionLimit.msg  DynamixelOptionMode.msg  DynamixelState.msg  DynamixelStatus.msg  ExternalPort.msg  ReadMe.md  desing_msg.md
opencr/dynamixel_to_dxl_imu/: dynamixel_to_dxl_imu.ino
opencr/usb_to_dxl_imu/: usb_to_dxl_imu.ino
src/: dynamixel_handler.hpp  dynamixel_handler_ROS2.cpp  dynamixel_handler_ROS2.h  dynamixel_handler_dyn_interface_loop.cpp  dynamixel_handler_dyn_interface_once.cpp  dynamixel_handler_ros_interface.cpp  dynamixel_handler_ros_interface_pub.cpp  dynamixel_handler_ros_interface_sub.cpp  dynamixel_parameters.cpp  dynamixel_parameters.h  dynamixel_serialport.cpp  dynamixel_serialport.h  main.cpp  main_dynamixel_handler.cpp  main_dynamixel_unify_baudrate.cpp
src/optional_function/: external_port.cpp  external_port.hpp  imu_opencr.cpp  imu_opencr.hpp
src/sub_node/: dynamixel_unify_baudrate.cpp
