<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_handler_examples </name>
  <version>0.0.0</version>
  <description>The dynamixel_handler_examples package</description>
  <maintainer email="michikawa.ryohei@gmail.com">michikawa07</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>rosidl_default_generators</buildtool_depend> -->

  <!-- <build_depend>rosidl_default_generators</build_depend> -->
  <!-- <build_depend>rclcpp</build_depend> -->
  <!-- <build_depend>rmw_implementation</build_depend> -->
  <!-- <build_depend>cmake_modules</build_depend> -->
  <build_depend>dynamixel_handler_msgs</build_depend>

  <!-- <exec_depend>rclcpp</exec_depend>
  <exec_depend>rmw_implementation</exec_depend> -->
  <exec_depend>ros2launch</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>